# spice_queries

./: README.md  blob_market_economics.ipynb  pyproject.toml
src/spice_queries/: __init__.py
