[project]
name = "spice-queries"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan K", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.12.0",
    "dune-spice>=0.2.4",
    "marimo>=0.9.14",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "altair>=5.4.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spice_queries"]
